Closed Bug 776024 Opened 14 years ago Closed 14 years ago

GCC 4.6 build failure after landings of bug 715814

Categories

(Core :: DOM: Core & HTML, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla17

People

(Reporter: cpearce, Assigned: cpearce)

References

Details

Attachments

(2 files)

Attached file Compile error
I pulled from inbound and the landings from bug 715814 caused build failures on my machine. I'm running Ubuntu 12.04 x64, and have gcc version 4.6.3 (Ubuntu/Linaro 4.6.3-1ubuntu5). Error is: nsLayoutModule.cpp In file included from /home/cpearce/src/mozilla/inbound/layout/build/nsLayoutModule.cpp:84:0: /home/cpearce/src/mozilla/inbound/netwerk/base/src/nsSimpleURI.h:37:58: warning: ‘virtual bool nsSimpleURI::Read(const IPC::Message*, void**)’ was hidden [-Woverloaded-virtual] /home/cpearce/src/mozilla/inbound/dom/src/jsurl/nsJSProtocolHandler.h:82:62: warning: by ‘virtual nsresult nsJSURI::Read(nsIObjectInputStream*)’ [-Woverloaded-virtual] /home/cpearce/src/mozilla/inbound/netwerk/base/src/nsSimpleURI.h:37:155: warning: ‘virtual void nsSimpleURI::Write(IPC::Message*)’ was hidden [-Woverloaded-virtual] /home/cpearce/src/mozilla/inbound/dom/src/jsurl/nsJSProtocolHandler.h:83:62: warning: by ‘virtual nsresult nsJSURI::Write(nsIObjectOutputStream*)’ [-Woverloaded-virtual] /home/cpearce/src/mozilla/inbound/layout/build/nsLayoutModule.cpp: In function ‘nsresult ActivityConstructor(nsISupports*, const nsIID&, void**)’: /home/cpearce/src/mozilla/inbound/layout/build/nsLayoutModule.cpp:253:232: error: use of deleted function ‘mozilla::dom::Activity::Activity()’ In file included from /home/cpearce/src/mozilla/inbound/layout/build/nsLayoutModule.cpp:93:0: ../../dist/include/mozilla/dom/Activity.h:21:7: error: ‘mozilla::dom::Activity::Activity()’ is implicitly deleted because the default definition would be ill-formed: ../../dist/include/mozilla/dom/Activity.h:21:7: error: no matching function for call to ‘mozilla::dom::DOMRequest::DOMRequest()’ ../../dist/include/mozilla/dom/Activity.h:21:7: note: candidates are: ../../dist/include/mozilla/dom/DOMRequest.h:44:3: note: mozilla::dom::DOMRequest::DOMRequest(nsIDOMWindow*) ../../dist/include/mozilla/dom/DOMRequest.h:44:3: note: candidate expects 1 argument, 0 provided ../../dist/include/mozilla/dom/DOMRequest.h:20:7: note: mozilla::dom::DOMRequest::DOMRequest(const mozilla::dom::DOMRequest&) ../../dist/include/mozilla/dom/DOMRequest.h:20:7: note: candidate expects 1 argument, 0 provided Build output is attached. This looks similar to bug 689301.
Attached patch PatchSplinter Review
This fixes the compile error in GCC 4.6.
Assignee: nobody → cpearce
Status: NEW → ASSIGNED
Attachment #644447 - Flags: review?(mounir)
Comment on attachment 644447 [details] [diff] [review] Patch Review of attachment 644447 [details] [diff] [review]: ----------------------------------------------------------------- r=me with the nits addressed ::: dom/activities/src/Activity.cpp @@ +76,5 @@ > mProxy->Cleanup(); > } > } > + > +Activity::Activity() : DOMRequest() { nit: coding style wants: Activity::Activity() : DOMRequest() { } ::: dom/activities/src/Activity.h @@ +32,5 @@ > // nsIJSNativeInitializer > NS_IMETHOD Initialize(nsISupports* aOwner, JSContext* aContext, > JSObject* aObject, PRUint32 aArgc, jsval* aArgv); > > + Activity(); nit: can you leave a blank line between "Activity()" and "protected:"?
Attachment #644447 - Flags: review?(mounir) → review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: