Bug 776024 - Add explicit constructor to dom::Activity to prevent deleted implicit constructor warning in GCC 4.6. r=mounir